testing/tests/ui/duplicated_template_attribute.stderr
error: must specify `source`, `path` or `is_doc` exactly once
 --> tests/ui/duplicated_template_attribute.rs:9:5
  |
9 |     source = "ğŸ™ƒ",
  |     ^^^^^^
